Fixed responsive on smaller content

--- a/src/styles/Home.module.scss
+++ b/src/styles/Home.module.scss
@@ -7,6 +7,7 @@
 .containers {
   padding: 20px;
   max-width: 700px;
+  width: 100%;
   margin: auto;
 }
 
@@ -44,7 +45,6 @@
   gap: 30px;
   border-radius: 5px;
   color: $white;
-
   .comment {
     display: flex;
     align-items: center;
